{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 20,
  "lineage": "dff06963-46b3-8756-9a4b-c07c08349d1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e95a5e2743ec9ec9",
            "arn": "arn:aws:ec2:us-east-1:718240086340:instance/i-072d6f39870bf1820",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-6340-ec2-profile-ca80b0af",
            "id": "i-072d6f39870bf1820",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08b83afb877263185"
              }
            ],
            "primary_network_interface_id": "eni-08b83afb877263185",
            "private_dns": "ip-10-0-2-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.145",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:718240086340:key/1d699820-3d3e-4a8d-aa0f-8c85a4cb7e5a",
                "tags_all": {
                  "Environment": "Production",
                  "Owner": "integration-tests",
                  "Purpose": "automated-testing"
                },
                "throughput": 125,
                "volume_id": "vol-094df38c22c75e91d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bca6dd9e31b0bb90",
            "tags": {
              "Name": "prod-6340-instance"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-instance",
              "Owner": "integration-tests",
              "Purpose": "automated-testing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036f86247e2b9e61b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.private",
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_trust_policy",
            "random_id.secret_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718240086340:internet-gateway/igw-05cd428343596fb86",
            "id": "igw-05cd428343596fb86",
            "owner_id": "718240086340",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-6340-igw"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-igw",
              "Owner": "integration-tests",
              "Purpose": "automated-testing"
            },
            "vpc_id": "vpc-0eadd17691d572c65"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718240086340:route-table/rtb-0f588a00adaaac905",
            "id": "rtb-0f588a00adaaac905",
            "owner_id": "718240086340",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "prod-6340-private-rt"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-private-rt",
              "Owner": "integration-tests",
              "Purpose": "automated-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eadd17691d572c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718240086340:route-table/rtb-06ba3a9908cdc652d",
            "id": "rtb-06ba3a9908cdc652d",
            "owner_id": "718240086340",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cd428343596fb86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-6340-public-rt"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-public-rt",
              "Owner": "integration-tests",
              "Purpose": "automated-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eadd17691d572c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0017c87b1c0d7743f",
            "region": "us-east-1",
            "route_table_id": "rtb-0f588a00adaaac905",
            "subnet_id": "subnet-0bca6dd9e31b0bb90"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd31133bda0db966",
            "region": "us-east-1",
            "route_table_id": "rtb-06ba3a9908cdc652d",
            "subnet_id": "subnet-080782d8e82eea560"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718240086340:security-group/sg-036f86247e2b9e61b",
            "description": "Security group for private resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036f86247e2b9e61b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d959ce0d4af553bd"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from public subnet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d959ce0d4af553bd"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d959ce0d4af553bd"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-6340-private-sg",
            "name_prefix": "",
            "owner_id": "718240086340",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-6340-private-sg"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-private-sg",
              "Owner": "integration-tests",
              "Purpose": "automated-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eadd17691d572c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718240086340:security-group/sg-0d959ce0d4af553bd",
            "description": "Security group for public resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d959ce0d4af553bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "HTTP from approved CIDRs",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "HTTPS from approved CIDRs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-6340-public-sg",
            "name_prefix": "",
            "owner_id": "718240086340",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-6340-public-sg"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-public-sg",
              "Owner": "integration-tests",
              "Purpose": "automated-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eadd17691d572c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718240086340:subnet/subnet-0bca6dd9e31b0bb90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bca6dd9e31b0bb90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718240086340",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-6340-private-subnet",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-private-subnet",
              "Owner": "integration-tests",
              "Purpose": "automated-testing",
              "Type": "Private"
            },
            "vpc_id": "vpc-0eadd17691d572c65"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718240086340:subnet/subnet-080782d8e82eea560",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080782d8e82eea560",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718240086340",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-6340-public-subnet",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-public-subnet",
              "Owner": "integration-tests",
              "Purpose": "automated-testing",
              "Type": "Public"
            },
            "vpc_id": "vpc-0eadd17691d572c65"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718240086340:vpc/vpc-0eadd17691d572c65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b09eb8deeda97d27",
            "default_route_table_id": "rtb-06528379ccbe001b9",
            "default_security_group_id": "sg-01b53f9488a697adb",
            "dhcp_options_id": "dopt-0c3f33172d411048e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eadd17691d572c65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06528379ccbe001b9",
            "owner_id": "718240086340",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-6340-vpc"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-6340-vpc",
              "Owner": "integration-tests",
              "Purpose": "automated-testing"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current"
          ]
        }
      ]
    }
  ]
}